traces/bug_861.txt
examples++-load/tetgen.cpp:2593: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/tetgen.cpp:2593:1: initialization of callDoLoadInit
2591.   #define  WITH_NO_INIT
2592.   #include "msh3.cpp" 
2593. > LOADFUNC(Load_Init)

examples++-load/tetgen.cpp:2593:1: call to DoLoadInit
2591.   #define  WITH_NO_INIT
2592.   #include "msh3.cpp" 
2593. > LOADFUNC(Load_Init)

examples++-load/tetgen.cpp:2593:1: call to addInitFunct
  2591.   #define  WITH_NO_INIT
  2592.   #include "msh3.cpp" 
  2593. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
